--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
     "license": "MIT",
     "autoload": {
         "psr-4": {
-            "Xuanhieu080\\MailOtp\\": "src/"
+            "Xuanhieu\\MailOtp\\": "src/"
         }
     },
     "authors": [
@@ -20,10 +20,10 @@
     "extra": {
         "laravel": {
             "providers": [
-                "Xuanhieu080\\MailOtp\\MailOtpServiceProvider"
+                "Xuanhieu\\MailOtp\\MailOtpServiceProvider"
             ],
             "aliases": {
-                "MailOtp": "Xuanhieu080\\MailOtp\\Facades\\MailOtp"
+                "MailOtp": "Xuanhieu\\MailOtp\\Facades\\MailOtp"
             }
         }
     }
